<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@drawable/settingsbkg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/nameView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/ageView"
        android:layout_width="210dp"
        android:layout_height="80dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameView"
        app:layout_constraintVertical_bias="0.026" />

    <View
        android:id="@+id/waightView"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ageView"
        app:layout_constraintTop_toBottomOf="@+id/nameView"
        app:layout_constraintVertical_bias="0.026" />

    <View
        android:id="@+id/hightView"
        android:layout_width="206dp"
        android:layout_height="80dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageView"
        app:layout_constraintVertical_bias="0.021" />

    <View
        android:id="@+id/genderView"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/hightView"
        app:layout_constraintTop_toBottomOf="@+id/waightView"
        app:layout_constraintVertical_bias="0.021" />

    <View
        android:id="@+id/emailview"
        android:layout_width="0dp"

        android:layout_height="80dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusView"
        app:layout_constraintVertical_bias="0.064" />

    <View
        android:id="@+id/sensorView"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/statusView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hightView"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/NameEingabe"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/name"

        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/nameView"
        app:layout_constraintEnd_toEndOf="@+id/nameView"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/nameView"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="1.0"
       />

    <TextView
        android:id="@+id/einstellungentext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/einstellungen"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/planealter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/alter"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/ageView"
        app:layout_constraintEnd_toEndOf="@+id/ageView"
        app:layout_constraintStart_toStartOf="@+id/ageView"
        app:layout_constraintTop_toTopOf="@+id/ageView"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/gewichtEingabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:hint="@string/gewicht"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/waightView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ageView"
        app:layout_constraintTop_toTopOf="@+id/waightView"
        app:layout_constraintVertical_bias="0.514"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <EditText
        android:id="@+id/grosseEingabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:hint="@string/gr_e"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/hightView"
        app:layout_constraintEnd_toStartOf="@+id/genderView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageView"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/geschlechtEingabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/geschlecht"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/genderView"
        app:layout_constraintEnd_toEndOf="@+id/genderView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/genderView"
        app:layout_constraintTop_toTopOf="@+id/genderView"
        app:layout_constraintVertical_bias="0.428"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/emailview"
        app:layout_constraintEnd_toEndOf="@+id/statusView"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="@+id/statusView"
        app:layout_constraintTop_toTopOf="@+id/statusView"
        app:srcCompat="@android:drawable/sym_action_email" />

    <EditText
        android:id="@+id/emailEingabe"
        android:layout_width="350dp"
        android:layout_height="68dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/statusView"
        app:layout_constraintEnd_toEndOf="@+id/statusView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/statusView"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/textviewstatus"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/fitniss_status"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/emailview"
        app:layout_constraintEnd_toEndOf="@+id/emailview"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="@+id/emailview"
        app:layout_constraintTop_toTopOf="@+id/emailview"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/btbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:backgroundTint="#20A0D3"
        android:text="@string/bluetooth_heartratesensor_verbinden"
        app:icon="@android:drawable/stat_sys_data_bluetooth"
        app:layout_constraintBottom_toBottomOf="@+id/sensorView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="@+id/sensorView"
        app:layout_constraintTop_toTopOf="@+id/sensorView"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/statusanzeige"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:hint="StatusAnzeige"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="@+id/sensorView"
        app:layout_constraintTop_toBottomOf="@+id/btbutton"
        app:layout_constraintVertical_bias="0.208" />

</androidx.constraintlayout.widget.ConstraintLayout>